--- a/Banco - FrontEnd/css/estilos.css
+++ b/Banco - FrontEnd/css/estilos.css
@@ -2,7 +2,7 @@ body{
     margin: 0 0 0 0;
 }
 
-.header{
+header{
     margin: 0%;
     padding: 0;
     width: 100%;
@@ -15,12 +15,17 @@ body{
     align-items: center;
 }
 
-.header h1{
+header h1{
     width: 20%;
     text-align: center;
 }
 
-.header nav {
+header h1 a {
+    text-decoration: none;
+    color:#E5E7E9;
+}
+
+header nav {
     height: 100%;
     width: 20%;
     display: flex;
@@ -29,7 +34,7 @@ body{
     font-size: 20px;
 }
 
-.header nav button{
+header nav button{
     color: #E5E7E9;
     background: #283747;
     border: 1px solid #E5E7E9;
@@ -37,10 +42,14 @@ body{
     padding: 10px 20px;
 }
 
-.header nav button:hover{
+header nav button:hover{
     color: #283747;
     background: #E5E7E9;
     border: 1px solid #E5E7E9;
+}
+
+main {
+    margin: 2% 5%;
 }
 
 footer{
@@ -97,7 +106,7 @@ footer h2{
     border: 1px solid #283747;
 }
 
-.signUp_user button{
+.signUp_user input[type="submit"] {
     width: 100%;
     height: 40px;
     color: #E5E7E9;
@@ -108,7 +117,7 @@ footer h2{
     margin: 5px 0 25px 0;
 }
 
-.signUp_user button:hover{
+.signUp_user input[type="submit"]:hover{
     color: #E5E7E9;
     background: crimson;
     border: 1px solid #283747;
